[package]
name = "tsl"
version = "1.0.0"
edition = "2024"
description = "A shader language for text-based graphics"
repository = "https://github.com/SirPigari/tsl"
default-run = "tslc"
license = "MIT"

[lib]
name = "tsl"
path = "src/lib.rs"

[[bin]]
name = "tslc"
path = "src/main.rs"

[[bin]]
name = "tsl_editor"
path = "src/editor.rs"
required-features = ["editor"]

[features]
editor = [
    "dep:eframe",
    "dep:egui",
    "dep:ansi-parser",
]

[dependencies]
eframe = { version = "0.35", optional = true }
egui = { version = "0.35", optional = true }
ansi-parser = { version = "0.9", optional = true }

[profile.release]
opt-level = 3
lto = true
codegen-units = 1